--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "sue": "./bin/cli.js"
   },
   "dependencies": {
-    "commander": "^11.0.0"
+    "chalk": "^5.3.0",
+    "commander": "^11.0.0",
+    "figlet": "^1.6.0",
+    "fs-extra": "^11.1.1",
+    "inquirer": "^9.2.10"
   },
   "type": "module"
 }
