--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sue-cli",
   "version": "1.0.0",
-  "description": "sue show love to liang",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,11 +12,15 @@
     "sue": "./bin/cli.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "download-git-repo": "^3.0.2",
     "figlet": "^1.6.0",
     "fs-extra": "^11.1.1",
-    "inquirer": "^9.2.10"
+    "inquirer": "^9.2.10",
+    "ora": "^7.0.1",
+    "util": "^0.12.5"
   },
   "type": "module"
 }
